--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ else()
   unset(OOFCANVAS_PYTHON3_VERSION CACHE)
 endif()
 
-messaage("**** OOFCANVAS_PYTHON3_VERSION=${OOFCANVAS_PYTHON3_VERSION}")
+message("**** OOFCANVAS_PYTHON3_VERSION=${OOFCANVAS_PYTHON3_VERSION}")
 
 option(OOFCANVAS_USE_IMAGEMAGICK "Use ImageMagick" ON)
 
