Added python 3.12 to the list of accepted versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ set_property(CACHE OOFCANVAS_PYTHON_API PROPERTY STRINGS ${pythonOptions})
 if(${OOFCANVAS_PYTHON_API} STREQUAL "Python3")
   set(OOFCANVAS_PYTHON3_VERSION "Latest" CACHE STRING "Python3 version number")
   set_property(CACHE OOFCANVAS_PYTHON3_VERSION
-    PROPERTY STRINGS 3.8 3.9 3.10 3.11 Latest)
+    PROPERTY STRINGS 3.8 3.9 3.10 3.11 3.12 Latest)
 else()
   unset(OOFCANVAS_PYTHON3_VERSION CACHE)
 endif()
